--- a/guideLine/html/main/index.html
+++ b/guideLine/html/main/index.html
@@ -37,13 +37,13 @@
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2021/capture-main2021-01.png" alt="부천 한빛도서관">
-                            <figcaption>부천 한빛도서관</figcaption>
-                        </figure>
+                            <figcaption>부천 한빛도서관<span>(신규 퍼블리싱)</span></figcaption>
+                        </figure>`
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2021/capture-main2021-02.png" alt="평택주차포털">
-                            <figcaption>평택주차포털</figcaption>
+                            <figcaption>평택주차포털<span>(신규 퍼블리싱)</span></figcaption>
                         </figure>
                     </article>
                 </section>
@@ -52,43 +52,43 @@
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2020/capture-main2020-01.png" alt="양주시설관리공단">
-                            <figcaption>양주시설관리공단</figcaption>
+                            <figcaption>양주시설관리공단<span>(신규 퍼블리싱)</span></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2020/capture-main2020-02.png" alt="부천노상앱">
-                            <figcaption>부천노상앱</figcaption>
+                            <figcaption>부천노상앱<span>(신규 퍼블리싱)</span></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2020/capture-main2020-03.png" alt="수원주차포털">
-                            <figcaption><a href="https://parking.suwonudc.co.kr/">수원주차포털</a></figcaption>
+                            <figcaption><a href="https://parking.suwonudc.co.kr/">수원주차포털<span>(유지보수)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2020/capture-main2020-04.png" alt="부천주차포털">
-                            <figcaption><a href="https://parking.bcits.go.kr/">부천주차포털</a></figcaption>
+                            <figcaption><a href="https://parking.bcits.go.kr/">부천주차포털<span>(유지보수)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2020/capture-main2020-05.png" alt="한강 통합주차포털">
-                            <figcaption><a href="https://www.ihangangpark.kr/">한강 통합주차포털</a></figcaption>
+                            <figcaption><a href="https://www.ihangangpark.kr/">한강 통합주차포털<span>(유지보수)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2020/capture-main2020-06.png" alt="Inerv-manager">
-                            <figcaption>Inerv-manager</figcaption>
+                            <figcaption>Inerv-manager<span>(유지보수)</span></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2020/capture-main2020-07.png" alt="High-chart">
-                            <figcaption>High-chart</figcaption>
+                            <figcaption>High-chart<span>(유지보수)</span></figcaption>
                         </figure>
                     </article>
                 </section>
@@ -97,49 +97,49 @@
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2019/capture-main2019-01.png" alt="뉴오리진">
-                            <figcaption><a href="https://www.neworigin.co.kr/">뉴오리진</a></figcaption>
+                            <figcaption><a href="https://www.neworigin.co.kr/">뉴오리진<span>(유지보수)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2019/capture-main2019-02.png" alt="강아지왕국(&고양이왕국)">
-                            <figcaption><a href="https://www.dogskingdom.co.kr/">강아지왕국(&고양이왕국)</a></figcaption>
+                            <figcaption><a href="https://www.dogskingdom.co.kr/">강아지왕국(&고양이왕국)<span>(신규 퍼블리싱)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2019/capture-main2019-03.png" alt="동원몰">
-                            <figcaption><a href="https://www.dongwonmall.com/index.do">동원몰</a></figcaption>
+                            <figcaption><a href="https://www.dongwonmall.com/index.do">동원몰<span>(유지보수)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2019/capture-main2019-04.png" alt="빅커피">
-                            <figcaption><a href="https://www.bigcoffee.co.kr/">빅커피</a></figcaption>
+                            <figcaption><a href="https://www.bigcoffee.co.kr/">빅커피<span>(신규 퍼블리싱)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2019/capture-main2019-05.png" alt="사진노리">
-                            <figcaption><a href="http://sajinory.com/service_dnp/index_dnp.php">사진노리</a></figcaption>
+                            <figcaption><a href="http://sajinory.com/service_dnp/index_dnp.php">사진노리<span>(유지보수)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2019/capture-main2019-06.png" alt="픽스토리">
-                            <figcaption><a href="https://www.pixstory.co.kr/main/index.php">픽스토리</a></figcaption>
+                            <figcaption><a href="https://www.pixstory.co.kr/main/index.php">픽스토리<span>(유지보수)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/no-image.png" alt="성원부동산">
-                            <figcaption>성원부동산</figcaption>
+                            <figcaption>성원부동산<span>(신규 퍼블리싱)</span></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/no-image.png" alt="범아">
-                            <figcaption>범아</figcaption>
+                            <figcaption>범아<span>(유지보수)</span></figcaption>
                         </figure>
                     </article>
                 </section>
@@ -148,25 +148,25 @@
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2018/capture-main2018-01.png" alt="구리시여성노인회관">
-                            <figcaption><a href="http://www.guri.go.kr/main/edu">구리시여성노인회관</a></figcaption>
+                            <figcaption><a href="http://www.guri.go.kr/main/edu">구리시여성노인회관<span>(신규 퍼블리싱)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2018/capture-main2018-02.png" alt="인천영종역사관">
-                            <figcaption><a href="https://www.icjg.go.kr/museum/index">인천영종역사관</a></figcaption>
+                            <figcaption><a href="https://www.icjg.go.kr/museum/index">인천영종역사관<span>(신규 퍼블리싱)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2018/capture-main2018-03.png" alt="IFEZ">
-                            <figcaption><a href="https://www.ifez.go.kr/noti001">IFEZ</a></figcaption>
+                            <figcaption><a href="https://www.ifez.go.kr/noti001">IFEZ<span>(신규 퍼블리싱)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2018/capture-main2018-04.png" alt="서울열린데이터">
-                            <figcaption><a href="https://data.seoul.go.kr/">서울열린데이터</a></figcaption>
+                            <figcaption><a href="https://data.seoul.go.kr/">서울열린데이터<span>(유지보수)</span></a></figcaption>
                         </figure>
                     </article>
                 </section>
@@ -175,13 +175,13 @@
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2017/capture-main2017-01.png" alt="정부24">
-                            <figcaption><a href="https://www.gov.kr/portal/main">정부24</a></figcaption>
+                            <figcaption><a href="https://www.gov.kr/portal/main">정부24 <span>(유지보수)</span></a></figcaption>
                         </figure>
                     </article>
                     <article class="project-item">
                         <figure>
                             <img src="../../assets/images/capture/2017/capture-main2017-02.png" alt="충남지역사회서비스지원단">
-                            <figcaption><a href="https://cnss.or.kr/">충남지역사회서비스지원단</a></figcaption>
+                            <figcaption><a href="https://cnss.or.kr/">충남지역사회서비스지원단<span>(신규 퍼블리싱)</span></a></figcaption>
                         </figure>
                     </article>
                 </section>
