--- a/guideLine/html/sub/guideline.html
+++ b/guideLine/html/sub/guideline.html
@@ -132,7 +132,7 @@
             <h4>소스 비교</h4>
             <article class="explanation-box">
                 <table class="default-table">
-                    <caption class="sr-only"></caption>
+                    <caption class="sr-only">소스 위치 설명</caption>
                     <colgroup>
                         <col style="width: 25%" />
                         <col style="width: 75%" />
@@ -221,7 +221,7 @@
                 <ul>
                     <li>고객페이지: class="<span class="bold">subheading"</span></li>
                     <li>관리자페이지: class="<span class="bold">content-title"</span></li>
-                    <li class="red">해당 상황은 3곳에 사이트를 가져오다 보니 발생한 상황으로 차후 통일할 예정</li>
+                    <li class="red">해당 상황은 3곳에 사이트를 가져오다 보니 발생한 상황으로 차후 통일할 예정 (2021-05-14년 작업완료)</li>
                 </ul>   
             </article>
         </section>
@@ -447,12 +447,6 @@
                         </tr>
                     </tbody>
                 </table>
-            </article>
-        </section>
-        <section id="">
-            <h3>추가 준비중</h3>
-            <article class="explanation-box">
-                
             </article>
         </section>
     </main>
