--- a/guideLine/html/sub/sass.html
+++ b/guideLine/html/sub/sass.html
@@ -99,10 +99,10 @@
                     <tr>
                         <th>설명</th>
                         <td>
-                            <fugure>
+                            <figure>
                                <img src="../../assets/images/img-sass-04.png" alt="구글 개발자도구 셋팅">
                                <figcaption>개발자 도구에서 "<span class="bold">F1</span>" 클릭 후 해당 부분 체크</figcaption> 
-                            </fugure>
+                            </figure>
                         </td>
                     </tr>
                 </tbody>
@@ -121,14 +121,14 @@
                     <tr>
                         <th>sass 트리구조</th>
                         <td>
-                            <fugure>
+                            <figure>
                                <img src="../../assets/images/img-sass-01.png" alt="sass 설명">
                                <figcaption>트리구조 접었을 때</figcaption> 
-                            </fugure>
-                            <fugure>
+                            </figure>
+                            <figure>
                                 <img src="../../assets/images/img-sass-02.png" alt="sass 설명">
                                 <figcaption>트리구조 펼쳐졌을때</figcaption> 
-                             </fugure>
+                             </figure>
                         </td>
                     </tr>
                     <tr>
