--- a/guideLine/html/sub/svelte.html
+++ b/guideLine/html/sub/svelte.html
@@ -63,6 +63,7 @@
         <section id="command">
             <h3>Svelte 명령어</h3>
             <table class="default-table">
+                <caption class="sr-only">Svelte 명령어 설명</caption>
                 <colgroup>
                     <col style="width: 25%" />
                     <col style="width: 75%" />
@@ -90,6 +91,7 @@
         <section id="rendering">
             <h3>선언적 랜더링</h3>
             <table class="default-table">
+                <caption class="sr-only">선언적 랜더링에 대한 설명</caption>
                 <colgroup>
                     <col style="width: 25%" />
                     <col style="width: 75%" />
