--- a/vueProject/playground/router.html
+++ b/vueProject/playground/router.html
@@ -10,6 +10,10 @@
 </head>
 <body>
  <div id="app">
+     <div>
+         <router-link to="/login">Login</router-link>
+         <router-link to="/main">Main</router-link>
+     </div>
      <router-view></router-view>
  </div>
  <script>
@@ -21,6 +25,9 @@
         template: '<div>Main</div>'
     }
     var router =  new VueRouter({
+        // url 해쉬태그 제거
+        mode: 'history', 
+        
         // 페이지의 라우팅 정보
         routes: [
             {
